# Streamlit

./: 01_variables.sh  03_install_streamlit.sh  README.md  entorno.sh  install.sh  upload.sh
Install_2023/: 02_install_app.sh  app.py  entorno.sh
Install_2024/: 02_entorno.sh  03_.install_streamlit.sh  03_install_streamlit.sh  app.py  install.sh
py/: app.py
zip_cpp/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
zip_cpp/.streamlit/: config.toml
zip_cpp/src/dimred_ccp/: __init__.py  app.py  cli.py  core.py
zip_cpp/tests/: test_smoke.py
